Version 1.8.0.9000
------------------------------------------------------------------------------


Version 1.8.0
------------------------------------------------------------------------------
* New built in datasets intended for tutorials and tests:
  - Fusion example data for dropout analysis (Thanks to Dixie Peters).
  set6 (dataset)
  ref61 (Marker order is different from set6. Includes a Y marker with NA.)
  ref62 (Marker order is same as set6. Includes a Y marker with NA.)
  - ESSplex SE QS example data for inhibition analysis.
  set7 (dataset)
  ref7 (reference dataset)
* New functions
  - plotContamination_gui
  - calculateCopies
  - calculateCopies_gui
  - calculateHb
  - calculateHb_gui
  - tableHb
  - tableHb_gui
* Removed functions
  - calculateBalance
  - calculateBalance_gui
* Replaced functions:
  - calculateHeterozygous -> calculateCopies (faster and more functions)
  - calculateHeterozygous_gui -> calculateCopies_gui (faster and more functions)
  - calculateBalance -> calculateHb (faster and more robust)
  - calculateBalance_gui -> calculateHb_gui (faster and more robust)
* Bug fixes and improvements with the most significant listed below:
  - addColor
  Fixed dataset saved to attributes.
  Fixed attribute 'kit' saved with wrong name.
  - calculateDropout
  Fixed dataset saved to attributes.
  Implemented new filterProfile function to remove sex markers and quality sensors.
  - calculateHb
  Fixed dataset saved to attributes.
  - calculateHeight
  Fixed parameter 'word' not saved to attributes.
  Fixed error when homozygotes are given as double notation in reference dataset.
  - calculatePeaks
  Rewritten for efficiency using the data.table package.
  Added factors to Group for correct order when creating plot.
  - calculatePeaks_gui
  Changed some labels, added tooltips, changed one widget.
  - filterProfile
  Now retains information in 'File.Name' and 'File.Time' when adding markers.
  Fixed attribute 'kit' saved with wrong name.