@@ -3,7 +3,7 @@ Package: strvalidator
 Type: Package
 Title: Process Control and Internal Validation of Forensic STR Kits
 Version: 1.8.0.9000
-Date: 2016-10-04
+Date: 2016-10-10
 Author: Oskar Hansson
 Maintainer: Oskar Hansson <oskar.hansson@fhi.no>
 URL: https://sites.google.com/site/forensicapps/strvalidator
