@@ -1,6 +1,11 @@
 Version 1.8.0.9000
 ------------------------------------------------------------------------------
 
+* Bug fixes and improvements with the most significant listed below:
+  - combine_gui
+  Changed to rbind.fill to handle filling in missing columns.
+  Check for column names no longer require identical order.
+
 
 Version 1.8.0
 ------------------------------------------------------------------------------
